<resources>
    <string name="app_name">ORDIN</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Navigation -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_manage">Manage Faces</string>
    <string name="title_register">Register Face</string>
    <string name="title_settings">Settings</string>
    <string name="title_sign_out">Sign Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Manage -->
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Register -->
    <string name="picture">Register</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="description_info">Info</string>

    <!-- Settings -->
    <string name="pref_enable_ordin">Enable ORDIN</string>
    <string name="pref_spoofing_detection">Spoofing Detection</string>
    <string name="pref_duo_authentication">Duo Authentication</string>

    <string name="pref_security_level">Security Level</string>
    <string-array name="pref_security_level_types">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="pref_security_level_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
