<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="ordin_switch"
        android:title="@string/pref_enable_ordin" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="spoofing_detection_switch"
        android:title="@string/pref_spoofing_detection" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="duo_authentication_switch"
        android:title="@string/pref_duo_authentication" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_security_level_types"
        android:entryValues="@array/pref_security_level_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_security_level" />
</PreferenceScreen>
